--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "9228:9228"
       - "9229:9229"
     volumes:
-      - "/home/garagon/dsf_se/bgw/config:/bgw/config"
+      - "./bgw/config:/bgw/config"
     logging:
       driver: "json-file"
       options:
@@ -26,7 +26,7 @@ services:
       #- NGINX_PORT=8085
     volumes:
       #- /home/garagon/dsf_se/nginx/config.d/mysite.template:/etc/nginx/conf.d/mysite.template
-      - /home/garagon/dsf_se/nginx/config.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/config.d/default.conf:/etc/nginx/conf.d/default.conf
     #network_mode: "host"
     #command: /bin/bash -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
     networks:
