--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       #- /home/garagon/dsf_se/nginx/config.d/mysite.template:/etc/nginx/conf.d/mysite.template
       - ./nginx/config.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./tests/results:/usr/src/app/tests/results
     #network_mode: "host"
     #command: /bin/bash -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
     networks:
@@ -42,6 +43,8 @@ services:
         max-size: "10m"
         max-file: "10"
    # restart: "always"
+volumes:
+  results:
 
 networks:
   bgw_nw:
