--- a/nginx/config.d/default.conf
+++ b/nginx/config.d/default.conf
@@ -3,6 +3,7 @@ server {
     server_name localhost;
 
     location / {
+	include cors_support;
         proxy_set_header   Host                 $host;
         proxy_set_header   X-Real-IP            $remote_addr;
         proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
