--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: "simulation-engine"
     container_name: "se"
     volumes:
-       - .:/usr/src/app/data
+       - ../simulation-engine/results:/usr/src/app/data
        #- .:/usr/src/app
         #- host_path:${CONTAINER_PATH}#this in combination with the code below does not work on windows
         #- 'tests: /usr/src/app/tests'
