--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,26 @@
 version: '3'
 services:
 
-
+  redis:
+    image: redis:latest
+    container_name: "redis_S4G"
+    command: redis-server
+    ports:
+      - "6379:6379"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+    restart: "always"
   se:
     build:
       context: ""
       dockerfile: Dockerfile
     image: "simulation-engine"
     container_name: "se"
-    #depends_on:
-      #- redis
+    depends_on:
+      - redis
     volumes:
        - ../simulation-engine/results:/usr/src/app/data
        #- .:/usr/src/app
