--- a/nginx/config.d/default.conf
+++ b/nginx/config.d/default.conf
@@ -2,6 +2,9 @@ server {
     listen 8085;
     server_name localhost;
 
+    #
+    # Wide-open CORS config for nginx
+    #
     location / {
 	include cors_support;
         proxy_set_header   Host                 $host;
@@ -12,4 +15,5 @@ server {
 
         proxy_pass http://se:9090;
     }
+
 }
