--- a/nginx/config.d/default.conf
+++ b/nginx/config.d/default.conf
@@ -1,19 +1,25 @@
 server {
     listen 8085;
-    server_name localhost;
 
-    #
-    # Wide-open CORS config for nginx
-    #
     location / {
-	include cors_support;
-        proxy_set_header   Host                 $host;
-        proxy_set_header   X-Real-IP            $remote_addr;
-        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto    $scheme;
-        proxy_set_header Host $http_host;
+	proxy_pass http://s4g-professional-gui:4200;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 
+    location /se {
         proxy_pass http://se:9090;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /api {
+        proxy_pass http://se-mock-api:5000;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
 }
