--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./optimization-framework/optimization/resources:/usr/src/app/optimization/resources
       - ./optimization-framework/utils/resources:/usr/src/app/utils/resources
       - ./optimization-framework/logs:/usr/src/app/logs
+      - ./optimization-framework/logs/pyomo:/usr/src/app/logs/pyomo
       - ./optimization-framework/utils/gurobi/license:/usr/src/app/share/gurobi811/license/gurobi.lic
     logging:
       driver: "json-file"
