--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,27 +13,27 @@ services:
         max-size: "10m"
         max-file: "10"
     restart: "always"
-  ofw:
-    image: garagon/optimization:amd
-    container_name: "ofw"
-    ports:
-      - "8080:8080"
-    depends_on:
-      - redis
-    volumes:
-      - ./optimization-framework/prediction/resources:/usr/src/app/prediction/resources
-      - ./optimization-framework/optimization/resources:/usr/src/app/optimization/resources
-      - ./optimization-framework/utils/resources:/usr/src/app/utils/resources
-      - ./optimization-framework/logs:/usr/src/app/logs
-      - ./optimization-framework/logs/pyomo:/usr/src/app/logs/pyomo
-      - ./optimization-framework/utils/gurobi/license:/usr/src/app/share/gurobi811/license/gurobi.lic
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "10"
-    command: ["python3", "-u", "ofw.py"]
-    #restart: "always"
+#  ofw:
+#    image: garagon/optimization:amd
+#    container_name: "ofw"
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - redis
+#    volumes:
+#      - ./optimization-framework/prediction/resources:/usr/src/app/prediction/resources
+#      - ./optimization-framework/optimization/resources:/usr/src/app/optimization/resources
+#      - ./optimization-framework/utils/resources:/usr/src/app/utils/resources
+#      - ./optimization-framework/logs:/usr/src/app/logs
+#      - ./optimization-framework/logs/pyomo:/usr/src/app/logs/pyomo
+#      - ./optimization-framework/utils/gurobi/license:/usr/src/app/share/gurobi811/license/gurobi.lic
+#    logging:
+#      driver: "json-file"
+#      options:
+#        max-size: "10m"
+#        max-file: "10"
+#    command: ["python3", "-u", "ofw.py"]
+#    #restart: "always"
 
   se:
     build:
