--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: minimal
 before_script:
     - export VERSION=${TRAVIS_BRANCH}  BUILDNUM=${TRAVIS_BUILD_NUMBER}
 script:
-    - docker-compose -f docker-compose.yml build
+  - if [ $TRAVIS_BRANCH == "master" ]; then docker-compose -f docker-compose.yml build ofw; fi
+    #- docker-compose -f docker-compose.yml build
 
 before_deploy:
     #- docker tag simulation-engine linksmart/simulation-engine
