--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 services:
-
+  redis:
+    image: redis:latest
+    container_name: "redis_S4G"
+    command: redis-server
+    ports:
+      - "6379:6379"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+    restart: "always"
 
 
   se:
@@ -9,8 +20,8 @@ services:
       dockerfile: Dockerfile
     image: linksmart/simulation-engine
     container_name: "se"
-    #depends_on:
-      #- redis
+    depends_on:
+      - redis
     volumes:
        - ../simulation-engine/results:/usr/src/app/data
        #- .:/usr/src/app
@@ -27,4 +38,4 @@ services:
         max-file: "10"
     # restart: "always"
 #    command: ["python3", "-u", "./profiles.py"]
-    command: ["python3", "-u", "test.py"]
+    command: ["python3", "-u", "main.py"]
