--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - redis
     volumes:
        - ../simulation-engine/results:/usr/src/app/data
+       #- C:/Program Files/OpenVPN/config:/usr/src/app/openvpn
        #- .:/usr/src/app
         #- host_path:${CONTAINER_PATH}#this in combination with the code below does not work on windows
         #- 'tests: /usr/src/app/tests'
