--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
     
 language: minimal
 
-before_script:
-    - export VERSION=${TRAVIS_BRANCH}  BUILDNUM=${TRAVIS_BUILD_NUMBER}
+#before_script:
+    #- export VERSION=${TRAVIS_BRANCH}  BUILDNUM=${TRAVIS_BUILD_NUMBER}
 script:
   - if [ $TRAVIS_BRANCH == "master" ]; then docker-compose -f docker-compose.yml build se; fi
     #- docker-compose -f docker-compose.yml build
@@ -12,7 +12,7 @@ before_deploy:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 deploy:
   - provider: script
-    script: docker push garagon/simulation-engine:latest
+    script: docker push garagon/simulation-engine
     on:
       branch: master
   - provider: script
