--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-connexion
-gunicorn
-psutil
-more_itertools
-jsonpickle
-simplejson
-flask-cors
-numpy
-
-senml
-paho-mqtt
+connexion==2.3.0
+gunicorn==19.9.0
+psutil==5.6.3
+more-itertools==7.2.0
+jsonpickle==1.2
+simplejson==3.16.0
+Flask-Cors==3.0.8
+numpy==1.14.5
+senml==0.1.0
+paho-mqtt==1.4.0
 
