--- a/docker-compose-profess.yml
+++ b/docker-compose-profess.yml
@@ -13,23 +13,27 @@ services:
         max-file: "10"
     restart: "always"
   ofw:
+    build:
+      context: /Linksmart/optimization-framework
+      dockerfile: Dockerfile
     image: garagon/optimization:amd
     container_name: "ofw"
     ports:
-      - "8080:8080"
+      - "8081:8080"
     depends_on:
       - redis
     volumes:
       - ./optimization-framework/prediction/resources:/usr/src/app/prediction/resources
       - ./optimization-framework/optimization/resources:/usr/src/app/optimization/resources
-      - ./optimization-framework/utils/resources:/usr/src/app/utils/resources
       - ./optimization-framework/logs:/usr/src/app/logs
+      - ./optimization-framework/utils:/usr/src/app/utils
       - ./optimization-framework/logs/pyomo:/usr/src/app/logs/pyomo
-      - ./optimization-framework/utils/gurobi/license:/usr/src/app/share/gurobi811/license/gurobi.lic
+      - ./optimization-framework/utils/gurobi/license:/usr/src/app/share/gurobi811/license
+
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "10"
     command: ["python3", "-u", "ofw.py"]
-    #restart: "always"
+    restart: "always"
