--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build:
       context: ""
       dockerfile: Dockerfile
-    image: garagon/simulation-engine
+    image: garagon/simulation-engine:fit
     container_name: "se"
     depends_on:
       - redis
